--- a/duration-prediction.ipynb
+++ b/duration-prediction.ipynb
@@ -21,6 +21,25 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "4aa1ca25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scikit-learn==1.2.2\n",
+      "scikit-learn-intelex==20230228.214242\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip freeze | grep scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "41062d8a",
    "metadata": {},
    "outputs": [],
@@ -30,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c984c564",
    "metadata": {},
    "outputs": [],
@@ -40,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4add538c",
    "metadata": {},
    "outputs": [],
@@ -51,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8b135c2b",
    "metadata": {},
    "outputs": [],
@@ -66,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2366f6ab",
    "metadata": {},
    "outputs": [],
@@ -77,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "9f380fc3",
    "metadata": {},
    "outputs": [
@@ -87,7 +106,7 @@
        "46.44530513776499"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "8e013caf",
    "metadata": {},
    "outputs": [],
@@ -121,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "116ff0cc",
    "metadata": {},
    "outputs": [
@@ -131,7 +150,7 @@
        "6.98619068174382"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "b134c97b",
    "metadata": {},
    "outputs": [
@@ -163,7 +182,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1623/1672306066.py:1: UserWarning: \n",
+      "/tmp/ipykernel_6349/1672306066.py:1: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -174,7 +193,7 @@
       "https://gist.github.com/mwaskom/de44147ed2974457ad6372750bbe5751\n",
       "\n",
       "  sns.distplot(y_pred, label='prediction')\n",
-      "/tmp/ipykernel_1623/1672306066.py:2: UserWarning: \n",
+      "/tmp/ipykernel_6349/1672306066.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -190,10 +209,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f7f73d27e80>"
+       "<matplotlib.legend.Legend at 0x7fa9eb02d060>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -217,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "f9e6479e",
    "metadata": {},
    "outputs": [],
@@ -244,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "8029eba0",
    "metadata": {},
    "outputs": [],
@@ -255,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "f6f2f0eb",
    "metadata": {},
    "outputs": [
@@ -265,7 +284,7 @@
        "(2421440, 2918187)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "951d51ef",
    "metadata": {},
    "outputs": [],
@@ -287,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "c5cbfc25",
    "metadata": {},
    "outputs": [],
@@ -305,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "1e9fb68b",
    "metadata": {},
    "outputs": [],
@@ -317,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "429e2394",
    "metadata": {},
    "outputs": [
@@ -327,7 +346,7 @@
        "7.78641055663652"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "bea7ca8d",
    "metadata": {},
    "outputs": [],
@@ -353,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "22bf6f8b",
    "metadata": {},
    "outputs": [],
@@ -364,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "a4999b94",
    "metadata": {},
    "outputs": [
@@ -374,7 +393,7 @@
        "8.116069832221214"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
